--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,25 @@
 }
 
 .redes_img{
-    height: 24px;
+    height: 28px;
     margin-left: 4px;
 }
 
 .titulo_producto{
-    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    font-weight: 600;
     margin-top: 4px;
 }
 
+.img_slider{
+    height: 200px;
+    
+}
+
 .card_producto{
-    background-color: bisque;
+    background-color: rgb(255, 206, 114);
     margin: 8px;
     padding: 8px;
     border-radius: 8px;
