--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,14 @@
     display: flex;
     justify-content: center;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 800;
     margin-top: 4px;
 }
 
 .precio_producto{
     display: flex;
     justify-content: center;
-    font-size: 14px;
+    font-size: 16px;
     margin-top: 4px;
 }
 
@@ -46,7 +46,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(255, 206, 114);
+    background-color: antiquewhite;
+    /* background-color: rgb(255, 206, 114); */
     padding: 8px;
     border-radius: 8px;
     box-shadow: 1px 1px 2px rgb(190, 190, 190);
