--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ a {
     text-decoration: none;
 }
 
+.img_promo{
+    border-radius: 12px;
+  }
+
 .accordion-button{
     background-color: #F18D00 !important;
     color: white !important;
@@ -90,12 +94,13 @@ a {
 .redes{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .iconos_redes{
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .div_promo{
